# custom-seed-vc

./: .dockerignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
docker/socketio/: Dockerfile
examples/fine-tuning/: run.sh
examples/realtime-vc-via-socketio/: README.md
seed_vc/socketio/: api.py  client.py  model.py  runtime.py  schemas.py  server.py
tests/socketio/: test_api.py  test_api_convert.py  test_client.py  test_integration.py  test_model.py  test_rtf_monitoring.py  test_runtime.py  test_server.py
