[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seed-vc"
version = "20250701"
description = "Seed VC - Zero-shot voice conversion"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy>=1.26.4,<2",
    "torch>=2.7.1,<2.8",
    "torchvision>=0.22.1,<0.23",
    "torchaudio>=2.7.1,<2.8",
    "scipy>=1.13.1,<1.14",
    "librosa>=0.10.2,<0.11",
    "huggingface-hub>=0.28.1",
    "munch>=4.0.0,<4.1",
    "einops>=0.8.0,<0.9",
    "gradio>=5.23.0,<5.24",
    "pydub>=0.25.1,<0.26",
    "jiwer>=3.0.3,<3.1",
    "transformers>=4.46.3,<4.47",
    "FreeSimpleGUI>=5.1.1,<5.2",
    "funasr>=1.2.6,<1.3",
    "hydra-core>=1.3.2,<1.4",
    "soundfile>=0.12.1,<0.13",
    "sounddevice>=0.5.0,<0.6",
    "resemblyzer>=0.1.4,<0.2",
    "pyyaml>=6.0.2,<7",
    "python-dotenv>=1.1.0,<2",
    "python-socketio>=5.13.0,<6",
    "eventlet>=0.40.0,<0.41",
    "matplotlib>=3.10.3,<4",
    "descript-audio-codec>=1.0.0,<1.1",
    "descript-audiotools",
    "onnx>=1.18.0,<2",
    # NOTE: onnxruntime>=1.24 drops python 3.10 wheels
    "onnxruntime>=1.21.1,<1.24",
    "tensorboard>=2.20.0,<3",
]

[project.urls]
repository = "https://github.com/hdwlab/custom-seed-vc.git"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "ruff==0.11.11",
    "pdbpp>=0.11.6,<0.12",
]
client = [
    "numpy>=1.26.4,<2",
    "python-socketio>=5.13.0,<6",
    "sounddevice>=0.5.2,<0.6",
    "websocket-client>=1.8.0,<2",
    "pydantic>=2.11.0,<3",
    "requests>=2.32.4,<3",
]

[tool.uv]
default-groups = ["dev", "client"]

[tool.uv.sources]
torch = [{ index = "torch_cu118", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "torch_cu118", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "torch_cu118", marker = "sys_platform == 'linux'" }]
descript-audiotools = { git = "https://github.com/descriptinc/audiotools" }

[[tool.uv.index]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["seed_vc"]

[tool.pytest.ini_options]
addopts = "--verbose --durations=0"
testpaths = ["tests"]

[tool.ruff]
exclude = [".pytest_cache", ".venv", "baselines"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "D", # flake8-docstrings,
  "E", # pycodestyle
  "F", # Pyflakes
  "G", # flake8-logging-format
  "I", # isort
  "W", # pycodestyle
  "PT", # flake8-pytest
]
ignore = [
    # [D105] Missing docstring in magic method
    # [D203] `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    # [D213] `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
    # [S101] Use of `assert` detected
    # [PT023] pytest-incorrect-mark-parentheses-style
    "D105",
    "D203",
    "D213",
    "S101",
    "PT023",
    # Additional ignores for this project
    "E731",
    "E741",
    "A001",
    "A002",
]


[tool.ruff.lint.per-file-ignores]
"tests/**" = ["INP001"]
"seed_vc/bin/*.py" = ["D100"]
"seed_vc/bin/real-time-gui.py" = ["E402"]
"seed_vc/bin/app*.py" = ["E501"]
"seed_vc/modules/openvoice/*_app.py" = ["E501"]
# NOTE(hdl-members): The following errors are bug of the original code.
"seed_vc/modules/openvoice/modules.py" = ["F821"]
"seed_vc/modules/astral_quantization/bsq.py" = ["F821"]
"seed_vc/modules/bigvgan/alias_free_activation/cuda/activation1d.py" = ["D"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"
